<resources>
    <string name="app_name">Customer</string>
    <string name="map_api_key">AIzaSyB7Ing6GdkgoE_QOKXBirnpj3KfSOdnbY0</string>


    <string name="welcome_to_customer_profiler_creation">Welcome to Customer Profiler Creation</string>
    <string name="user_id_hint">User ID</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_data">No data found</string>


    <string name="customer_profile_page_title">Customer Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_delete">Delete</string>


    <string name="shop_outside_picture">Shop Outside Picture</string>
    <string name="shop_inside_picture">Shop Inside Picture</string>
    <string name="section_picture">Section / Rack picture</string>
    <string name="no_outside_img">No Outside Image Added</string>
    <string name="no_inside_img">No Inside Image Added</string>
    <string name="no_section_img">No Section Image Added</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="entry_hours">Entry Hours</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="store_entrance">Store Entrance</string>
    <string name="store_entrance_hint">Exact Location of Store Entrance</string>
    <string name="lattitude_hint">Lattitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="receiving_entrance">Receiving Entrance</string>
    <string name="receiving_entrance_hint">Exact Location of Receiving Entrance</string>


    <string name="cust_name_hint">Customer Name</string>
    <string name="cust_id_hint">Customer ID</string>
    <string name="upload_shop_outside_picture">Upload Shop Outside Picture</string>
    <string name="upload_shop_inside_picture">Upload Shop Inside Picture</string>
    <string name="upload_section_picture">Upload Section / Rack picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>




    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email ID</string>
    <string name="street_hint">Street</string>
    <string name="web_hint">https://…</string>



    <string name="user_id_blank_msg">Please enter user id</string>
    <string name="pwd_blank_msg">Please enter password</string>




    <string-array name="socialOption">
        <item>Website</item>
        <item>Facebook Link</item>
        <item>Twitter Link</item>
        <item>Instagram Link</item>
        <item>Google Plus Link</item>
        <item>Pinterest Link</item>
        <item>Any Other Link</item>
    </string-array>

</resources>
