<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <data>


    </data>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:title="@string/customer_profile_page_title" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/dp_60"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:background="@color/page_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_35"
                android:paddingRight="@dimen/dp_35">

                <EditText
                    android:id="@+id/etCustName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/dp_10"
                    android:background="@drawable/edt_round_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/cust_name_hint"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/sp_13"/>

                <EditText
                    android:id="@+id/etCustId"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/dp_10"
                    android:background="@drawable/edt_round_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/cust_id_hint"
                    android:textSize="@dimen/sp_13"/>

            </LinearLayout>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvOutSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/upload_shop_outside_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvOutSide"
                    android:layout_width="@dimen/dp_105"
                    android:layout_height="@dimen/dp_105"
                    android:padding="@dimen/dp_35"
                    android:src="@drawable/ic_camera"
                    android:background="@color/colorAccent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="onClick"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvOutside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_images"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            </LinearLayout>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvInside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/upload_shop_inside_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvInside"
                    android:layout_width="@dimen/dp_105"
                    android:layout_height="@dimen/dp_105"
                    android:padding="@dimen/dp_35"
                    android:src="@drawable/ic_camera"
                    android:background="@color/colorAccent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="onClick"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvInside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_images"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            </LinearLayout>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/upload_section_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvSection"
                    android:layout_width="@dimen/dp_105"
                    android:layout_height="@dimen/dp_105"
                    android:padding="@dimen/dp_35"
                    android:src="@drawable/ic_camera"
                    android:background="@color/colorAccent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:onClick="onClick"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    tools:listitem="@layout/item_images"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="bottom"
        app:cardElevation="@dimen/dp_4"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/page_bg_color">

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_0.5"
                android:paddingTop="@dimen/dp_10"
                android:drawableTop="@drawable/ic_save"
                android:foreground="?attr/selectableItemBackground"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:text="@string/save"/>

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_0.5"
                android:paddingTop="@dimen/dp_10"
                android:drawableTop="@drawable/ic_cancel"
                android:foreground="?attr/selectableItemBackground"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:text="@string/cancel"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>

</layout>


