<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <data>


    </data>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color"
    tools:context=".activity.ShowImagesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:title="@string/customer_profile_page_title" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/dp_60"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_20"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_16">

                <com.thimble.customer.view.TypedfaceTextView
                    android:id="@+id/tvCustName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:text="Customer Name"/>

                <com.thimble.customer.view.TypedfaceTextView
                    android:id="@+id/tvCustId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:text="Customer ID"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/page_bg_color"/>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvOutSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/shop_outside_picture"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvOutside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clipToPadding="false"
                tools:listitem="@layout/item_images"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvInside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/shop_inside_picture"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvInside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clipToPadding="false"
                tools:listitem="@layout/item_images"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <com.thimble.customer.view.TypedfaceTextView
                android:id="@+id/tvSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/section_picture"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clipToPadding="false"
                tools:listitem="@layout/item_images"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="bottom"
        app:cardElevation="@dimen/dp_4"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/page_bg_color">

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_0.5"
                android:paddingTop="@dimen/dp_10"
                android:drawableTop="@drawable/ic_edit"
                android:foreground="?attr/selectableItemBackground"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:text="@string/edit"/>

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_0.5"
                android:paddingTop="@dimen/dp_10"
                android:drawableTop="@drawable/ic_delete"
                android:foreground="?attr/selectableItemBackground"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:text="@string/delete"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>

</layout>


